[gd_scene load_steps=7 format=3 uid="uid://dfqajoqvr05i8"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_fbysq"]
[ext_resource type="Theme" uid="uid://bwelnjre1lx7j" path="res://Scenes/ui/themes/theme_title.tres" id="1_qbrhj"]
[ext_resource type="Texture2D" uid="uid://bcmug2fkq1ybf" path="res://Asset_Pack/Background_0.png" id="1_vctw5"]
[ext_resource type="Theme" uid="uid://dg2qdv72ayqap" path="res://Scenes/ui/themes/bg-test.tres" id="1_xjl46"]
[ext_resource type="Theme" uid="uid://dvfut26fprh7d" path="res://Scenes/ui/themes/theme_one.tres" id="2_g4arw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_evg2l"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fbysq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xjl46")
texture = ExtResource("1_vctw5")
metadata/_edit_lock_ = true

[node name="Title" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
theme = ExtResource("1_qbrhj")

[node name="Label" type="Label" parent="CanvasLayer/Title"]
layout_mode = 2
size_flags_vertical = 1
text = "Catformer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="PanelContainer" parent="CanvasLayer"]
material = SubResource("CanvasItemMaterial_evg2l")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.5
offset_right = 300.0
offset_bottom = 349.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g4arw")

[node name="ButtonsContainer" type="VBoxContainer" parent="CanvasLayer/Buttons"]
layout_mode = 2

[node name="Button_Play" type="Button" parent="CanvasLayer/Buttons/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play
"

[node name="Button_CloseTutorials" type="Button" parent="CanvasLayer/Buttons/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Toggle Tutorial
"

[node name="Button_Appendix" type="Button" parent="CanvasLayer/Buttons/ButtonsContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Appendix"

[node name="Button_Quit" type="Button" parent="CanvasLayer/Buttons/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Buttons/ButtonsContainer/Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ButtonsContainer/Button_CloseTutorials" to="." method="_on_button_close_tutorials_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ButtonsContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
